--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/app.css">
     <title>pro music player</title>
+    <script src="js/app.js" defer></script>
 </head>
+
 
 <body>
     <div class="container">
@@ -99,7 +101,7 @@
             </button>
     </footer>
 
-    <script src="js/app.js"></script>
+    
 </body>
 
 </html>
